logs/mattys-mocks.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mattys_mocks'...
Compiling './lib/python3.5/site-packages/mattys_mocks/object.py'...
***   File "./lib/python3.5/site-packages/mattys_mocks/object.py", line 61
    print 'calling all method calls'
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mattys_mocks/patch.py'...
***   File "./lib/python3.5/site-packages/mattys_mocks/patch.py", line 68
    print instance.attribute_calls
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mattys_mocks/tests'...
Listing './lib/python3.5/site-packages/mattys_mocks/tests/mock_these'...
Compiling './lib/python3.5/site-packages/mattys_mocks/tests/patch_tests.py'...
***   File "./lib/python3.5/site-packages/mattys_mocks/tests/patch_tests.py", line 51
    print dir(datetime)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mattys_mocks-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
